--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-briefcase"></i> <!--/ edit required-->
 	   				</div>
 
 	   				
